--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@types/googlemaps": "^3.43.3",
+    "creditcardpayments": "^1.0.3",
     "jwt-decode": "^3.1.2",
     "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^16.0.1",
